--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
     <body>
         <center>
             <h1>London Fine Generator</h1>
+            <label for="name">Offender Name:</label><br>
+            <input type="text" id="name" name="name"><br>
+            <label for="reason">Reason:</label><br>
+            <input type="text" id="reason" name="reason"><br>
+            <label for="amount">Amount (in Pounds):</label><br>
+            <input type="text" id="amount" name="amount"><br>
+            <input type="submit" value="Submit">
+            </form>
         </center>
     </body>
 </html>
