--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
             <input type="text" id="reason" name="reason"><br>
             <label for="amount">Amount (in Pounds):</label><br>
             <input type="text" id="amount" name="amount"><br>
+            <label for="email">Email:</label><br>
+            <input type="text" id="email" name="email"><br>
             <input type="submit" value="Submit">
         </form>
     </center>
